fix: show scrollbars again

--- a/src/renderer/app.scss
+++ b/src/renderer/app.scss
@@ -11,7 +11,3 @@ button {
     all: unset;
     cursor: pointer;
 }
-
-::-webkit-scrollbar {
-    display: none;
-}
